display text on widget

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">WhatIWatched</string>
+  <string name="app_name">What I Watched</string>
+  <string name="appwidget_text">EXAMPLE</string>
+<!--  <string name="add_widget">Add widget</string>-->
 </resources>
